--- a/index.html
+++ b/index.html
@@ -11,8 +11,47 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>JourneyJoy</title>
+    <link rel="shortcut icon" href="assets/img/location-icon.svg" />
   </head>
   <body>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Success</h5>
+            <button
+              type="button"
+              class="close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            You're now subscribed to our newsletter. Get ready for
+            adventure-filled updates!
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -89,7 +128,7 @@
             alt="Destination 1"
           />
           <div class="carousel-caption">
-            <h1>Dive Into Unforgettable Journeys</h1>
+            <h1 class="fw-bold">Dive Into Unforgettable Journeys</h1>
 
             <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
@@ -97,7 +136,7 @@
         <div class="carousel-item">
           <img src="assets/img/france.jpg" class="d-block w-100" alt="Louvre" />
           <div class="carousel-caption">
-            <h1>Embark on Epic Adventures</h1>
+            <h1 class="fw-bold">Embark on Epic Adventures</h1>
 
             <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
@@ -109,7 +148,7 @@
             alt="Japanese temple"
           />
           <div class="carousel-caption">
-            <h1>Explore Hidden Gems Around the Globe</h1>
+            <h1 class="fw-bold">Explore Hidden Gems Around the Globe</h1>
             <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
           </div>
         </div>
@@ -186,7 +225,7 @@
               alt="Travel image"
             />
           </div>
-          <div class="col-lg p-5">
+          <div class="col-lg p-4">
             <h2>About Us</h2>
             <p class="lead">
               Welcome to JourneyJoy, where we're passionate about helping you
@@ -208,6 +247,232 @@
         </div>
       </div>
     </section>
+    <!--Our Team-->
+    <section class="p-5 color2">
+      <div class="container">
+        <h2 class="text-center text-dark">Our Team</h2>
+        <p class="lead text-center text-dark mb-3">
+          Our team members are dedicated to crafting unforgettable journeys
+        </p>
+        <!--Team carousel-->
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12">
+              <div
+                id="carouselExampleIndicators2"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="row">
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/men/18.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Noah Johnson</h4>
+                            <p class="card-text">
+                              Our adventurous tour guide, leads immersive
+                              journeys filled with excitement and enriching
+                              insights into local culture.
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/women/8.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Emma Smith</h4>
+                            <p class="card-text">
+                              Emma, our travel planner, creates tailored
+                              itineraries ensuring a seamless and personalized
+                              journey for you.
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/men/1.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Alexander Chang</h4>
+                            <p class="card-text">
+                              Our seasoned adventurer, shares insider tips and
+                              off-the-beaten-path experiences to make your
+                              journey extraordinary.
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row">
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/women/17.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Sophia Patel</h4>
+                            <p class="card-text">
+                              Our customer care specialist, ensures your travel
+                              experience is exceptional, addressing any concerns
+                              with warmth and attention.
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/men/20.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Liam Garcia</h4>
+                            <p class="card-text">
+                              Liam, our creative content creator, brings
+                              destinations to life with captivating storytelling
+                              and stunning visuals.
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div class="card bg-light">
+                          <div class="card-body text-center">
+                            <img
+                              src="https://randomuser.me/api/portraits/women/23.jpg"
+                              class="rounded-circle mb-3"
+                              alt=""
+                            />
+                            <h4 class="card-title mb-3">Isabella Nguyen</h4>
+                            <p class="card-text">
+                              Isabella, our logistics coordinator, ensures every
+                              aspect of your journey runs smoothly, handling
+                              details behind the scenes
+                            </p>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-twitter"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-facebook"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-linkedin"></i
+                            ></a>
+                            <a href="#" class="social-icons-team"
+                              ><i class="fab fa-instagram"></i
+                            ></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row text-center">
+              <p>
+                <a
+                  class="btn btn-dark mb-3 mr-1"
+                  href="#carouselExampleIndicators2"
+                  role="button"
+                  data-bs-slide="prev"
+                >
+                  <i class="fa fa-arrow-left"></i>
+                </a>
+                <a
+                  class="btn btn-dark mb-3"
+                  href="#carouselExampleIndicators2"
+                  role="button"
+                  data-bs-slide="next"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Newsletter-->
     <section class="secondary text-light p-4">
       <div class="container">
@@ -217,7 +482,14 @@
           <div class="input-group news-input">
             <input type="text" class="form-control" placeholder="Enter Email" />
             <div class="input-group-append">
-              <button class="btn btn-dark btn-lg" type="button">Sign Up</button>
+              <button
+                class="btn btn-dark btn-lg"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Sign Up
+              </button>
             </div>
           </div>
         </div>
@@ -270,9 +542,9 @@
         </div>
       </div>
     </footer>
+    <!-- Bootstrap JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
     <script
