--- a/pages/about.html
+++ b/pages/about.html
@@ -11,8 +11,47 @@
     />
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
     <title>About</title>
+    <link rel="shortcut icon" href="../assets/img/location-icon.svg" />
   </head>
   <body>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Success</h5>
+            <button
+              type="button"
+              class="close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            You're now subscribed to our newsletter. Get ready for
+            adventure-filled updates!
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -51,11 +90,282 @@
         </div>
       </div>
     </nav>
+    <!--Header-->
+    <header class="py-5 text-center col-9 col-lg-7 mx-auto">
+      <h1 class="display-5 fw-bold mb-3">About us</h1>
+      <p class="text-muted lead mb-0">
+        Join us on a journey of discovery, adventure, and unforgettable
+        experiences. Let JourneyJoy be your trusted companion in exploring the
+        wonders of the world.
+      </p>
+    </header>
+    <div class="col-9 mx-auto">
+      <hr class="mt-2" />
+    </div>
+    <section class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg p-4">
+            <h5>Discover Adventurous Destinations</h5>
+            <p class="lead">
+              We specialize in curating a diverse range of adventurous
+              destinations, from the rugged mountains of Nepal to the tropical
+              jungles of Borneo. Whether you're seeking adrenaline-pumping
+              activities or serene natural landscapes, we've got you covered.
+            </p>
+            <h5>Personalized Trip Planning</h5>
+            <p class="lead">
+              Our team of travel experts is dedicated to crafting personalized
+              itineraries tailored to your preferences and interests. From
+              arranging accommodations and transportation to recommending
+              off-the-beaten-path experiences, we'll ensure that every detail of
+              your journey is thoughtfully planned.
+            </p>
+          </div>
+          <div class="col-lg">
+            <img
+              src="../assets/img/travel2.jpg"
+              class="img-fluid"
+              alt="Travel image"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg">
+            <img
+              src="../assets/img/travel3.jpg"
+              class="img-fluid"
+              alt="Travel image"
+            />
+          </div>
+          <div class="col-lg p-4">
+            <h5>Rich Destination Insights</h5>
+            <p class="lead">
+              Explore the world with confidence and knowledge through our
+              in-depth destination guides. Learn about the culture, history, and
+              must-see attractions of destinations across Europe, Asia, and
+              beyond. Our comprehensive guides will inspire you to embark on new
+              adventures and create unforgettable memories.
+            </p>
+            <h5>Expertise and Experience</h5>
+            <p class="lead">
+              With years of experience in the travel industry, our team
+              possesses the expertise and insider knowledge to deliver
+              exceptional travel experiences.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg p-4">
+            <h5>Customer Satisfaction</h5>
+            <p class="lead">
+              Your satisfaction is our top priority. We strive to exceed your
+              expectations at every step of your journey, ensuring a seamless
+              and memorable travel experience.
+            </p>
+            <h5>Passion for Adventure</h5>
+            <p class="lead">
+              We're avid adventurers ourselves, and we're dedicated to sharing
+              our passion for travel with you. Whether you're a seasoned
+              explorer or a first-time traveler, we're here to help you uncover
+              the world's hidden gems and embark on thrilling adventures.
+            </p>
+          </div>
+          <div class="col-lg">
+            <img
+              src="../assets/img/travel4.jpg"
+              class="img-fluid"
+              alt="Travel image"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Question Accordion-->
+    <section class="p-5 primary">
+      <div class="container">
+        <h2 class="text-center mb-4 secondary-t">Frequently Asked Questions</h2>
+        <div class="accordion accordion-flush" id="questions">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-one"
+                aria-expanded="false"
+                aria-controls="question-one"
+              >
+                1. How do I book a trip with your company?
+              </button>
+            </h2>
+            <div
+              id="question-one"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Booking a trip with us is easy! Simply browse through our
+                website to explore our range of adventurous destinations. Once
+                you've found your desired destination, click on the booking
+                button or contact us directly through our booking form. Our team
+                will assist you every step of the way to ensure a seamless
+                booking process.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-two"
+                aria-expanded="false"
+                aria-controls="question-two"
+              >
+                2. Are your trips suitable for solo travelers?
+              </button>
+            </h2>
+            <div
+              id="question-two"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingTwo"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Absolutely! Many of our trips are designed with solo travelers
+                in mind. We offer a variety of group tours and activities where
+                solo travelers can join like-minded adventurers from around the
+                world. Additionally, our team can help solo travelers tailor
+                their itineraries to meet their specific interests and
+                preferences.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-three"
+                aria-expanded="false"
+                aria-controls="question-three"
+              >
+                3. What type of accommodations do you offer?
+              </button>
+            </h2>
+            <div
+              id="question-three"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingThree"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                We understand that accommodations play a crucial role in your
+                travel experience. That's why we carefully select a range of
+                accommodations to suit every traveler's needs and budget.
+                Whether you prefer luxury resorts, cozy guesthouses, or
+                adventurous camping experiences, we've got you covered.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFour">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-four"
+                aria-expanded="false"
+                aria-controls="question-four"
+              >
+                4. Can I customize my itinerary?
+              </button>
+            </h2>
+            <div
+              id="question-four"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingFour"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Yes, absolutely! We believe that every traveler is unique, and
+                we're committed to creating personalized itineraries tailored to
+                your preferences. Whether you want to add extra activities,
+                extend your stay, or explore off-the-beaten-path destinations,
+                our team will work with you to design the perfect itinerary for
+                your adventure.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFive">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-five"
+                aria-expanded="false"
+                aria-controls="question-five"
+              >
+                5. What should I pack for my trip?
+              </button>
+            </h2>
+            <div
+              id="question-five"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingFive"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Packing for your adventure depends on the destination and
+                activities you've chosen. We provide detailed packing lists and
+                recommendations for each trip to help you prepare effectively.
+                Essentials usually include comfortable clothing, sturdy
+                footwear, weather-appropriate gear, and any specific items
+                required for activities such as hiking or snorkeling.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Newsletter-->
+    <section class="secondary text-light p-4">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
+
+          <div class="input-group news-input">
+            <input type="text" class="form-control" placeholder="Enter Email" />
+            <div class="input-group-append">
+              <button
+                class="btn btn-dark btn-lg"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Sign Up
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!--Fa Icons-->
     <script
       src="https://kit.fontawesome.com/4cd4ec0763.js"
       crossorigin="anonymous"
