--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -11,8 +11,47 @@
     />
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
     <title>Destinations</title>
+    <link rel="shortcut icon" href="../assets/img/location-icon.svg" />
   </head>
   <body>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Success</h5>
+            <button
+              type="button"
+              class="close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            You're now subscribed to our newsletter. Get ready for
+            adventure-filled updates!
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -53,6 +92,28 @@
         </div>
       </div>
     </nav>
+    <!--Newsletter-->
+    <section class="secondary text-light p-4">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h4 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h4>
+
+          <div class="input-group news-input">
+            <input type="text" class="form-control" placeholder="Enter Email" />
+            <div class="input-group-append">
+              <button
+                class="btn btn-dark btn-lg"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Sign Up
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
